manifestos/resources/deployment-old.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uikit-snack-v2-old
  namespace: ui-uikit-snack-v2
  labels:
    app: uikit-snack-v2
    version: old
spec:
  replicas: 1
  selector:
    matchLabels:
      version: old
  template:
    metadata:
      labels:
        app: uikit-snack-v2
        version: old
      annotations:
        sidecar.istio.io/proxyCPU: '10m'
        sidecar.istio.io/proxyMemory: '64Mi'
    spec:
      containers:
        - name: uikit-snack-v2-old
          image: old
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              memory: '256Mi'
              cpu: '40m'
            requests:
              memory: '128Mi'
              cpu: '20m'
      imagePullSecrets:
        - name: docker-auth-config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 2
