manifestos/resources/istio-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: uikit-snack-v2
  namespace: ui-uikit-snack-v2
spec:
  host: uikit-snack-v2
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: new
      labels:
        version: new
    - name: old
      labels:
        version: old
