manifestos/resources/template-istio-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: uikit-snack-v2-$CI_COMMIT_BRANCH_CUT
  namespace: ui-uikit-snack-v2
  labels:
    app: uikit-snack-v2
    todo: delete
  annotations:
    janitor/ttl: 7d
spec:
  host: uikit-snack-v2
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: $CI_COMMIT_BRANCH_CUT
      labels:
        version: $CI_COMMIT_BRANCH_CUT
